# cli-test

./: .gitignore  Cargo.toml  Config.toml  README.md
src/: config.rs  lib.rs  main.rs
src/analysis/: antipatterns.rs  circular.rs  mod.rs  report.rs  unused.rs
src/analysis/antipatterns/: duplicate_functions.rs  god_class.rs  long_function.rs  long_params.rs  mod.rs
